# erc20-pool

./: README.md
python/: MANIFEST.in  requirements.txt  setup.cfg  test_requirements.txt
python/erc20_pool/: pool.py  quote.py
python/erc20_pool/data/: DecimalQuote.json  DecimalQuote.metadata.json  SwapPool.json  SwapPool.metadata.json  __init__.py
python/erc20_pool/unittest/: base.py  quote.py
python/tests/: test_base.py  test_fee.py  test_interface.py  test_quoter.py  test_token.py
solidity/: DecimalQuote.sol  Makefile  SwapPool.sol
