[metadata]
name = erc20-pool
version = 0.0.1
description = Permissioned ERC20 swap pool for EVM
author = Louis Holbrook
author_email = dev@holbrook.no
url = https://holbrook.no/src/erc20-pool/log.html
keywords =
	dlt
	blockchain
	cryptocurrency
	ethereum
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	Development Status :: 3 - Alpha
	Topic :: Software Development :: Libraries
	Environment :: Console
	Intended Audience :: Developers
	License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
	Topic :: Internet
#	Topic :: Blockchain :: EVM
license = AGPLv3+
licence_files =
	LICENSE

[options]
include_package_data = True
python_requires = >= 3.8
packages = 
	erc20_pool
	erc20_pool.unittest
	erc20_pool.data
